--- a/CSS/user_profile.css
+++ b/CSS/user_profile.css
@@ -63,6 +63,11 @@
     font-size: 17px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+#my_profile_bold{
+    color: blue;
+    font-weight: 700;
+    font-size: 17px;
+}
 #user_profile_grid{
     display: grid;
     grid-template-columns: repeat(3,1fr);
