--- a/CSS/navbaar.css
+++ b/CSS/navbaar.css
@@ -204,7 +204,51 @@ h1{
 #navbaar_top_on_another_page>li:nth-child(even){
     border-left: 1px solid white;
     border-right: 1px solid white;
-  }
+}
+#nav_account_div_list{
+    background-color: white;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 0px 0px 10px 10px;
+    padding: 0px;
+}
+#nav_account_div_list>li{
+    border-bottom: 1px dotted rgb(70, 69, 69);
+    padding: 10px;
+    border-radius: 5px;
+}
+#nav_account_div_list>li a{
+    text-decoration: none;
+    color: rgb(13, 13, 13);
+    font-size: 17px;
+    font-weight: 600;
+    font-family: Roboto,"system-ui",sans-serif;
+}
+#triingle{
+    height: 0px;
+    width: 0px;
+    margin-left: 104px;
+    border-left: 17px solid transparent;
+    border-bottom: 17px solid white;
+    border-right: 17px solid transparent;
+}
+#home_page_user_name{
+    position: relative;
+}
+#nav_account_div{
+    position: absolute;
+    margin: auto;
+    width: 200px;
+    z-index: 1;
+    right: -21px;
+    top: 19px;
+    display: none;
+}
+#home_page_user_name:hover #nav_account_div,#nav_account_div:hover{
+    display: block;
+}
 @media only screen and (max-width: 739px) {
       #nav_serchbaar_div{
         flex-direction: column;
