--- a/homePage.css
+++ b/homePage.css
@@ -10,6 +10,7 @@ body{
     width: 100%;
 }
 #hp1>img{
+    /* height: 100%; */
     width: 100%;
 }
 #hp2>img{
@@ -92,23 +93,33 @@ body{
     height: 200px;
     margin-bottom: 0px;
 }
+#hp3>.hp3L{
+    position: relative;
+}
 #hp3>.hp3L>.btnLeft{
     position: absolute;
     border: 2px solid #cecece;
     left: 0%;
-    top: 120%;
+    top: 55%;
     font-size: 30px;
     background-color: transparent;
     cursor: pointer;
+    padding: 10px 0;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+#hp3>.hp3R{
+    position: relative;
 }
 #hp3>.hp3R>.btnRight{
     position: absolute;
     border: 2px solid #cecece;
     right: 0%;
-    top: 120%;
+    top: 55%;
     font-size: 30px;
     background-color: transparent;
     cursor: pointer;
+    padding: 10px 0;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 #hp3>.mid>.components>a>.product>.box2>.proName{
     color: #003380;
@@ -219,23 +230,34 @@ body{
     height: 200px;
     margin-bottom: 0px;
 }
+#hp4>.hp4L{
+    position: relative;
+}
+#hp4>.hp4R{
+    position: relative;
+}
 #hp4>.hp4L>.btnLeft{
+    border: 1px solid red;
     position: absolute;
     border: 2px solid #cecece;
     left: 0%;
-    top: 180%;
+    top: 55%;
     font-size: 30px;
     background-color: transparent;
     cursor: pointer;
+    padding: 10px 0;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 #hp4>.hp4R>.btnRight{
     position: absolute;
     border: 2px solid #cecece;
     right: 0%;
-    top: 180%;
+    top: 55%;
     font-size: 30px;
     background-color: transparent;
     cursor: pointer;
+    padding: 10px 0;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 #hp4>.mid>.components>a>.product>.box2>.proName{
     color: #003380;
@@ -877,4 +899,94 @@ body{
 #hp12>.mid>.components>a:first-child>img{
     width: 300px;
     margin-right: 10px;
+}
+#hp13{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#hp13>.first{
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    background-color: #003380;
+    color: white;
+    width: 100%;
+}
+#hp13>.first>.info>h3{
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1em;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+#hp13>.first>.info>p{
+    color: #fff;
+    display: block;
+    font-size: 15px;
+    overflow: hidden;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+#hp13>.second{
+    padding-top: 10;
+    display: flex;
+    /* width: 70%; */
+    /* justify-content: space-around; */
+    background-color: #003380;
+    color: white;
+    width: 100%;
+}
+#hp13>.second>.one{
+    margin-left: 83px;
+}
+#hp13>.second>.two{
+    margin-left: 250px;
+    margin-bottom: 30px;
+}
+#hp13>.second>.one>img{
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 18px;
+    cursor: pointer;
+}
+#hp13>.second>.two>img{
+    margin-top: 10px;
+    height: 42px;
+    cursor: pointer;
+}
+#hp13>.third{
+    display: flex;
+    justify-content: center;
+    /* margin-top: 30px; */
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: white;
+    text-align: center;
+    /* width: 90%; */
+    background-color: #0a244a;
+}
+#hp13>.third>.dummy{
+    width: 90%;
+}
+#hp13>.third>.dummy>h3{
+    font-size: small;
+    text-decoration: underline;
+    margin-bottom: 20px;
+}
+#hp13>.third>.dummy>p{
+    font-size: small;
+}
+#hp13>.fourth{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: small;
+    background-color: #0a244a;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    color: white;
 }
