--- a/CSS/navbaar.css
+++ b/CSS/navbaar.css
@@ -312,6 +312,11 @@ h1{
     padding: 15px;
     background-color: white;
   }
+
+  #main_serchbaar .fa-solid {
+    position:absolute;
+    right: 14px;
+}
 @media only screen and (max-width: 739px) {
       #nav_serchbaar_div{
         flex-direction: column;
