--- a/CSS/navbaar.css
+++ b/CSS/navbaar.css
@@ -138,7 +138,7 @@
     left: 34px;
     width: 95%;
     height: auto;
-    background-color: #39177d;
+    background-color: #233362;
     border-left: 1px solid rgb(137, 135, 135);
     border-right: 1px solid rgb(137, 135, 135);
     border-bottom: 1px solid rgb(137, 135, 135);
