--- a/CSS/user_order.css
+++ b/CSS/user_order.css
@@ -17,5 +17,22 @@
     margin-left: 10px;
     border-radius: 10px;
 }
+#user_order_grid>div{
+     display: flex;
+     /* grid-template-columns: repeat(3,1fr); */
+     gap: 10px;
+     justify-content: space-around;
+     align-items: center;
+     padding: 20px;
+     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+     border-radius: 10px;
+     margin: 5px;
+}
+#user_order_grid>div img{
+    width: 10%;
+}
+#user_order_grid>div h4{
+    width: 50%;
+}
 
 
