--- a/CSS/navbaar.css
+++ b/CSS/navbaar.css
@@ -317,6 +317,25 @@ h1{
     position:absolute;
     right: 14px;
 }
+#view_cart_button_nav{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: white;
+    padding: 10px 0px;
+    
+}
+#view_cart_button_nav button{
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: red;
+    border: none;
+    color: white;
+    height: 40px;
+    width: 200px;
+    border-radius: 5px;
+    margin-left: 50%;
+    cursor: pointer;
+}
 @media only screen and (max-width: 739px) {
       #nav_serchbaar_div{
         flex-direction: column;
